--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "nodemailer": "^6.10.1",
     "sequelize": "^6.37.7",
     "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "grpc-tools": "^1.13.0"
   }
 }
