--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "react": "^19.0.0",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^19.0.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router-dom": "^6.30.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
   },
